--- a/Account_my_favorite.html
+++ b/Account_my_favorite.html
@@ -1051,7 +1051,7 @@
 
                 <div class="l_my_favorite_product">
                     <div class="l_my_favorite_one">
-                        <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+                        <div class="l_product_img"><img src="./images/Account/cat_Farmina_33_feed.jpg" alt=""></div>
                         <div class="l_product_detail">
                             <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
                             <div class="l_product_price">NT$1,135 </div>
@@ -1082,7 +1082,7 @@
 
                     </div>
                     <div class="l_my_favorite_one">
-                        <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+                        <div class="l_product_img"><img src="./images/Account/cat_Farmina_39_feed.jpg" alt=""></div>
                         <div class="l_product_detail">
                             <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
                             <div class="l_product_price">NT$1,135 - NT$3,899</div>
@@ -1113,7 +1113,7 @@
 
                     </div>
                     <div class="l_my_favorite_one">
-                        <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+                        <div class="l_product_img"><img src="./images/Account/pet_usedinside_2-1.jpg" alt=""></div>
                         <div class="l_product_detail">
                             <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
                             <div class="l_product_price">NT$1,135 - NT$3,899</div>
@@ -1144,7 +1144,7 @@
 
                     </div>
                     <div class="l_my_favorite_one">
-                        <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+                        <div class="l_product_img"><img src="./images/Account/cat_snacks_16.jpg" alt=""></div>
                         <div class="l_product_detail">
                             <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
                             <div class="l_product_price">NT$1,135 - NT$3,899</div>
@@ -1206,7 +1206,8 @@
 
                     </div>
                     <div class="l_my_favorite_one">
-                        <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+                        <div class="l_product_img"><img src="./images/Account/dog-RoyalCanin-meet-3-6-de.jpg" alt="">
+                        </div>
                         <div class="l_product_detail">
                             <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
                             <div class="l_product_price">NT$1,135 - NT$3,899</div>
