--- a/my_account.html
+++ b/my_account.html
@@ -4657,7 +4657,7 @@
               <button class="l_delete"><svg class="">
                   <use xlink:href="./images/index/icomoon/symbol-defs.svg#">
                   </use>
-                </svg>刪除1</button>
+                </svg>刪除</button>
             </div>
             <div class="l_button_mobile">
               <button class="l_put_cart"><svg class="icon-cart">
@@ -4674,7 +4674,7 @@
 
           </div>
           <div class="l_my_favorite_one">
-            <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+            <div class="l_product_img"><img src="./images/Account/dog-RoyalCanin-meet-3-6-de.jpg" alt=""></div>
             <div class="l_product_detail">
               <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
               <div class="l_product_price">NT$1,135 - NT$3,899</div>
@@ -4688,7 +4688,7 @@
               <button class="l_delete"><svg class="">
                   <use xlink:href="./images/index/icomoon/symbol-defs.svg#">
                   </use>
-                </svg>刪除2</button>
+                </svg>刪除</button>
             </div>
             <div class="l_button_mobile">
               <button class="l_put_cart"><svg class="icon-cart">
@@ -4705,7 +4705,7 @@
 
           </div>
           <div class="l_my_favorite_one">
-            <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+            <div class="l_product_img"><img src="./images/Account/cat_snacks_16.jpg" alt=""></div>
             <div class="l_product_detail">
               <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
               <div class="l_product_price">NT$1,135 - NT$3,899</div>
@@ -4719,7 +4719,7 @@
               <button class="l_delete"><svg class="">
                   <use xlink:href="./images/index/icomoon/symbol-defs.svg#">
                   </use>
-                </svg>刪除3</button>
+                </svg>刪除</button>
             </div>
             <div class="l_button_mobile">
               <button class="l_put_cart"><svg class="icon-cart">
@@ -4736,7 +4736,7 @@
 
           </div>
           <div class="l_my_favorite_one">
-            <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+            <div class="l_product_img"><img src="./images/Account/cat_Farmina_33_feed.jpg" alt=""></div>
             <div class="l_product_detail">
               <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
               <div class="l_product_price">NT$1,135 - NT$3,899</div>
@@ -4750,7 +4750,7 @@
               <button class="l_delete"><svg class="">
                   <use xlink:href="./images/index/icomoon/symbol-defs.svg#">
                   </use>
-                </svg>刪除4</button>
+                </svg>刪除</button>
             </div>
             <div class="l_button_mobile">
               <button class="l_put_cart"><svg class="icon-cart">
@@ -4767,7 +4767,7 @@
 
           </div>
           <div class="l_my_favorite_one">
-            <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+            <div class="l_product_img"><img src="./images/Account/cat_snacks_7.jpg" alt=""></div>
             <div class="l_product_detail">
               <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
               <div class="l_product_price">NT$1,135 - NT$3,899</div>
@@ -4781,7 +4781,7 @@
               <button class="l_delete"><svg class="">
                   <use xlink:href="./images/index/icomoon/symbol-defs.svg#">
                   </use>
-                </svg>刪除5</button>
+                </svg>刪除</button>
             </div>
             <div class="l_button_mobile">
               <button class="l_put_cart"><svg class="icon-cart">
@@ -4798,7 +4798,7 @@
 
           </div>
           <div class="l_my_favorite_one">
-            <div class="l_product_img"><img src="./images/Account/pet_clean_4-1.jpg" alt=""></div>
+            <div class="l_product_img"><img src="./images/Account/pet_usedinside_2-1.jpg" alt=""></div>
             <div class="l_product_detail">
               <div class="l_product_name">【Natural Balance】低敏無穀地瓜雞肉犬糧│成犬配方</div>
               <div class="l_product_price">NT$1,135 - NT$3,899</div>
@@ -4812,7 +4812,7 @@
               <button class="l_delete"><svg class="">
                   <use xlink:href="./images/index/icomoon/symbol-defs.svg#">
                   </use>
-                </svg>刪除6</button>
+                </svg>刪除</button>
             </div>
             <div class="l_button_mobile">
               <button class="l_put_cart"><svg class="icon-cart">
