--- a/booking_woof_room.html
+++ b/booking_woof_room.html
@@ -1078,7 +1078,7 @@
                         <h4>空間:90*135*290高</h4>
                     </div>
                 </a></div>
-            <div class="l_catroom_2"> <a href="">
+            <div class="l_catroom_2"> <a href="./booking_woof_detail.html">
                     <div class="l_catroom_img"><img src="./images/Booking/l_catroom_img2.jpg" alt=""></div>
                     <div class="l_room_card">
                         <h1>咖啡王子</h1>
