--- a/booking_woof.html
+++ b/booking_woof.html
@@ -1014,7 +1014,7 @@
                     <use xlink:href="./images/index/icomoon/symbol-defs.svg#hotel_btn_dog"></use>
 
                 </svg>犬房</button>
-            <button class="l_btn_cat"><svg class="hotel_btn_cat">
+            <button class="l_btn_cat l_btn_cat2"><svg class="hotel_btn_cat">
                     <use xlink:href="./images/index/icomoon/symbol-defs.svg#hotel_btn_cat"></use>
 
                 </svg>貓房</button>
