--- a/booking_Selection.html
+++ b/booking_Selection.html
@@ -948,8 +948,8 @@
                                 <div class="l_hotel_name">牧貓精品寵物旅館</div>
                                 <div class="l_hotel_introduction">在每位爸媽心中，寶貝就像是我們的子女、家人，牠不只是寵物，更是我們心靈上的依靠，
                                     我們用心愛著牠，與牠分享生活的每一刻，一起歡笑，一起悲傷， 有牠在的每天，日子也變得多采多姿，也因為這份愛，讓牠與眾不同。</div>
-                                <button type="button" class="btn ">了解更多<img src="./images/Booking/arrow-right.png"
-                                        alt=""></button>
+                                <button type="button" class="btn " onclick="location.href='/booking_woof.html'">了解更多<img
+                                        src="./images/Booking/arrow-right.png" alt=""></button>
                             </div>
 
 
@@ -971,8 +971,8 @@
                                 <div class="l_hotel_introduction">
                                     三毛並不想走商業模式，我們更希望的是家的感覺，來過三毛的都能成為我們的朋友，貓咪狗狗也都能跟我們很親、相處得很好，三毛做事的前提都是希望來我們店的貓咪狗狗可以更幸福。
                                 </div>
-                                <button type="button" class="btn">了解更多<img src="./images/Booking/arrow-right.png"
-                                        alt=""> </button>
+                                <button type="button" class="btn" onclick="location.href='/booking_woof.html'">了解更多<img
+                                        src="./images/Booking/arrow-right.png" alt=""> </button>
                             </div>
 
 
