--- a/booking_woof.html
+++ b/booking_woof.html
@@ -1034,7 +1034,7 @@
 
         </div>
         <div class="l_dog_room" style="display: none;">
-            <div class="l_dogroom_1"><a href="">
+            <div class="l_dogroom_1"><a href="./booking_woof_detail.html">
                     <div class="l_dogroom_img"><img src="./images/Booking/l_dogroom_img1.jpg" alt="">
                     </div>
                     <div class="l_room_card">
@@ -1047,7 +1047,7 @@
                 </a></div>
 
 
-            <div class="l_dogroom_2"><a href="">
+            <div class="l_dogroom_2"><a href="./booking_woof_detail.html">
                     <div class="l_dogroom_img"><img src="./images/Booking/l_dogroom_img2.jpg" alt=""></div>
                     <div class="l_room_card">
                         <h1>中型犬</h1>
@@ -1056,7 +1056,7 @@
                         <h4>間:122*150*120高</h4>
                     </div>
                 </a> </div>
-            <div class="l_dogroom_3"> <a href="">
+            <div class="l_dogroom_3"> <a href="./booking_woof_detail.html">
                     <div class="l_dogroom_img"><img src="./images/Booking/l_dogroom_img3.jpg" alt=""></div>
                     <div class="l_room_card">
                         <h1>大型犬</h1>
@@ -1069,7 +1069,7 @@
         </div>
 
         <div class="l_cat_room">
-            <div class="l_catroom_1"><a href="">
+            <div class="l_catroom_1"><a href="./booking_woof_detail.html">
                     <div class="l_catroom_img"><img src="./images/Booking/l_catroom_img1.jpg" alt=""></div>
                     <div class="l_room_card">
                         <h1>太空漫遊</h1>
@@ -1078,7 +1078,7 @@
                         <h4>空間:90*135*290高</h4>
                     </div>
                 </a></div>
-            <div class="l_catroom_2"> <a href="">
+            <div class="l_catroom_2"> <a href="./booking_woof_detail.html">
                     <div class="l_catroom_img"><img src="./images/Booking/l_catroom_img2.jpg" alt=""></div>
                     <div class="l_room_card">
                         <h1>咖啡王子</h1>
@@ -1087,7 +1087,7 @@
                         <h4>空間:90*135*290高</h4>
                     </div>
                 </a></div>
-            <div class="l_catroom_3"><a href="">
+            <div class="l_catroom_3"><a href="./booking_woof_detail.html">
                     <div class="l_catroom_img"><img src="./images/Booking/l_catroom_img3.jpg" alt=""></div>
                     <div class="l_room_card">
                         <h1>夜貓俱樂部</h1>
@@ -1100,7 +1100,7 @@
 
         <div class="carousel l_dog_room_mobile" data-flickity='{ "wrapAround": true }'>
             <div class="carousel-cell">
-                <div class="l_dogroom_1"><a href="">
+                <div class="l_dogroom_1"><a href="./booking_woof_detail.html">
                         <div class="l_dogroom_img"><img src="./images/Booking/l_dogroom_img1.jpg" alt="">
                         </div>
                         <div class="l_room_card">
@@ -1113,7 +1113,7 @@
                     </a></div>
             </div>
             <div class="carousel-cell">
-                <div class="l_dogroom_2"><a href="">
+                <div class="l_dogroom_2"><a href="./booking_woof_detail.html">
                         <div class="l_dogroom_img"><img src="./images/Booking/l_dogroom_img2.jpg" alt=""></div>
                         <div class="l_room_card">
                             <h1>中型犬</h1>
@@ -1124,7 +1124,7 @@
                     </a> </div>
             </div>
             <div class="carousel-cell">
-                <div class="l_dogroom_3"> <a href="">
+                <div class="l_dogroom_3"> <a href="./booking_woof_detail.html">
                         <div class="l_dogroom_img"><img src="./images/Booking/l_dogroom_img3.jpg" alt=""></div>
                         <div class="l_room_card">
                             <h1>大型犬</h1>
@@ -1138,7 +1138,7 @@
         </div>
         <div class="carousel l_cat_room_mobile" data-flickity='{ "wrapAround": true }'>
             <div class="carousel-cell">
-                <div class="l_catroom_1"><a href="">
+                <div class="l_catroom_1"><a href="./booking_woof_detail.html">
                         <div class="l_catroom_img"><img src="./images/Booking/l_catroom_img1.jpg" alt=""></div>
                         <div class="l_room_card">
                             <h1>太空漫遊</h1>
@@ -1149,7 +1149,7 @@
                     </a></div>
             </div>
             <div class="carousel-cell">
-                <div class="l_catroom_2"> <a href="">
+                <div class="l_catroom_2"> <a href="./booking_woof_detail.html">
                         <div class="l_catroom_img"><img src="./images/Booking/l_catroom_img2.jpg" alt=""></div>
                         <div class="l_room_card">
                             <h1>咖啡王子</h1>
@@ -1160,7 +1160,7 @@
                     </a></div>
             </div>
             <div class="carousel-cell">
-                <div class="l_catroom_3"><a href="">
+                <div class="l_catroom_3"><a href="./booking_woof_detail.html">
                         <div class="l_catroom_img"><img src="./images/Booking/l_catroom_img3.jpg" alt=""></div>
                         <div class="l_room_card">
                             <h1>夜貓俱樂部</h1>
