--- a/booking_Selection.html
+++ b/booking_Selection.html
@@ -925,8 +925,9 @@
                                 <div class="l_hotel_name">沃夫寵物生活館</div>
                                 <div class="l_hotel_introduction">決定寵物寄宿與美容品質的最重要因素，是照護員和美容師的個人護理經驗和水平。
                                     我們擁有經驗豐富和最有愛心的團隊，且我們的每位成員仍定期參與進修課程，持續提升專業能力。</div>
-                                <button type="button" class="btn" onclick="location.href='/booking_woof.html'">了解更多<img
-                                        src="./images/Booking/arrow-right.png" alt=""></button>
+
+                                <li class="l_lookmore"><a href="/booking_woof.html">了解更多</a><img
+                                        src="./images/Booking/arrow-right.png" alt=""></li>
                             </div>
                         </div>
                         <div class="l_hotel_img">
@@ -947,9 +948,10 @@
                             <div class="l_Text">
                                 <div class="l_hotel_name">牧貓精品寵物旅館</div>
                                 <div class="l_hotel_introduction">在每位爸媽心中，寶貝就像是我們的子女、家人，牠不只是寵物，更是我們心靈上的依靠，
-                                    我們用心愛著牠，與牠分享生活的每一刻，一起歡笑，一起悲傷， 有牠在的每天，日子也變得多采多姿，也因為這份愛，讓牠與眾不同。</div>
-                                <button type="button" class="btn " onclick="location.href='/booking_woof.html'">了解更多<img
-                                        src="./images/Booking/arrow-right.png" alt=""></button>
+                                    我們用心愛著牠，與牠分享生活的每一刻，一起歡笑，一起悲傷， 有牠在的每天，日子也變
+                                    得多采多姿，也因為這份愛，讓牠與眾不同。</div>
+                                <li class="l_lookmore"><a href="/booking_woof.html">了解更多</a><img
+                                        src="./images/Booking/arrow-right.png" alt=""></li>
                             </div>
 
 
@@ -971,8 +973,8 @@
                                 <div class="l_hotel_introduction">
                                     三毛並不想走商業模式，我們更希望的是家的感覺，來過三毛的都能成為我們的朋友，貓咪狗狗也都能跟我們很親、相處得很好，三毛做事的前提都是希望來我們店的貓咪狗狗可以更幸福。
                                 </div>
-                                <button type="button" class="btn" onclick="location.href='/booking_woof.html'">了解更多<img
-                                        src="./images/Booking/arrow-right.png" alt=""> </button>
+                                <li class="l_lookmore"> <a href="/booking_woof.html"> 了解更多</a><img
+                                        src="./images/Booking/arrow-right.png" alt=""></li>
                             </div>
 
 
@@ -1047,7 +1049,8 @@
                     我們擁有經驗豐富和最有愛心的團隊，且我們的每位成員仍定期參與進修課程，持續提升專業能力。</div>
 
             </div>
-            <div class="button"><a href=".">了解更多<img src="./images/Booking/arrow-right.png" alt=""></a></div>
+            <div class="button"><a href="./booking_woof.html">了解更多<img src="./images/Booking/arrow-right.png"
+                        alt=""></a></div>
         </div>
         <div class="l_mumao_detail" style="display: none;">
             <div class="l_mumao_big"> <img src="./images/Booking/l_mumao_detailimg.png" alt=""> </div>
@@ -1063,7 +1066,8 @@
                     我們用心愛著牠，與牠分享生活的每一刻，一起歡笑，一起悲傷， 有牠在的每天，日子也變得多采多姿，也因為這份愛，讓牠與眾不同。</div>
 
             </div>
-            <div class="button"><a href=".">了解更多<img src="./images/Booking/arrow-right.png" alt=""></a></div>
+            <div class="button"><a href="./booking_woof.html">了解更多<img src="./images/Booking/arrow-right.png"
+                        alt=""></a></div>
         </div>
         <div class="l_sonemore_detail" style="display: none;">
             <div class="l_sonemore_big"> <img src="./images/Booking/l_sonemore_detailimg.png" alt=""> </div>
@@ -1079,7 +1083,8 @@
                     三毛並不想走商業模式，我們更希望的是家的感覺，來過三毛的都能成為我們的朋友，貓咪狗狗也都能跟我們很親、相處得很好，三毛做事的前提都是希望來我們店的貓咪狗狗可以更幸福。</div>
 
             </div>
-            <div class="button"><a href="">了解更多<img src="./images/Booking/arrow-right.png" alt=""></a></div>
+            <div class="button"><a href="./booking_woof.html">了解更多<img src="./images/Booking/arrow-right.png"
+                        alt=""></a></div>
         </div>
 
 
